--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
-    "knex:migrate": "yarn knex migrate:latest --knexfile knexfile.ts migrate:latest"
+    "knex:seed": "yarn knex migrate:latest --knexfile knexfile.ts seed:run",
+    "knex:migrate": "yarn knex --knexfile knexfile.ts migrate:latest"
   },
   "dependencies": {
     "express": "^4.17.1",
