--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "knex:migrate": "yarn knex --knexfile knexfile.ts migrate:latest"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.1",
     "sqlite": "^4.0.10",
